kubernetes/apps/home-assistant/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
