kubernetes/apps/home-assistant/home-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  hostnames:
    - home-assistant.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: home-assistant
          namespace: home-assistant
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
